--- a/languages/wp-page-for-term-sv_SE.po
+++ b/languages/wp-page-for-term-sv_SE.po
@@ -1,41 +1,59 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: WP Page For Term\n"
-"POT-Creation-Date: 2022-03-28 16:14+0200\n"
-"PO-Revision-Date: 2022-03-28 16:14+0200\n"
+"Report-Msgid-Bugs-To: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
-"Language: sv_SE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"POT-Creation-Date: 2022-03-28 16:14+0200\n"
+"PO-Revision-Date: 2022-03-28 16:14+0200\n"
+"Language: sv_SE\n"
 "X-Generator: Poedit 1.8.12\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-WPHeader: boilerplate.php\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-"X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
-"esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;"
-"_n_noop:1,2;_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
+"X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;_n_noop:1,2;_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
 
-#. Plugin Name of the plugin/theme
+#. Plugin Name of the plugin
 msgid "WP Page For Term"
-msgstr ""
+msgstr "WP Sida för Term"
 
-#. Plugin URI of the plugin/theme
+#. Plugin URI of the plugin
 msgid "https://github.com/annalinneajohansson/wp-page-for-term"
-msgstr ""
+msgstr "https://github.com/annalinneajohansson/wp-page-for-term"
 
-#. Description of the plugin/theme
+#. Description of the plugin
 msgid "Allows you to set a static page as the replacement for any term archive."
-msgstr ""
+msgstr "Tillåter dig att ställa in en statisk sida som ersättning för alla termer arkiv."
 
-#. Author of the plugin/theme
+#. Author of the plugin
 msgid "Anna Johansson"
-msgstr ""
+msgstr "Anna Johansson"
 
-#. Author URI of the plugin/theme
+#. Author URI of the plugin
 msgid "https://github.com/annalinneajohansson"
-msgstr ""
+msgstr "https://github.com/annalinneajohansson"
+
+#: source/php/AcfFields/php/wp-page-for-term-page-fields.php:8
+#: source/php/AcfFields/php/wp-page-for-term-page-fields.php:12
+msgid "Is page for term"
+msgstr "Ersätter term-sida"
+
+#: source/php/AcfFields/php/wp-page-for-term-page-fields.php:16
+msgid "Replaces the archive for:"
+msgstr "Ersätter arkivsida för:"
+
+#: source/php/AcfFields/php/wp-page-for-term-term-fields.php:8
+#: source/php/AcfFields/php/wp-page-for-term-term-fields.php:12
+#: source/php/App.php:120
+msgid "Page for term"
+msgstr "Sida för term"
+
+#: source/php/AcfFields/php/wp-page-for-term-term-fields.php:16
+msgid "Redirect this term to the selected page."
+msgstr "Omdirigera denna term till den valda sidan."
